--- a/contactus1.html
+++ b/contactus1.html
@@ -106,7 +106,7 @@ h3 {
 	</style>
 </head>
 <body>
-<center><img src="C:/Users/admin/Desktop/Jonathan/issue/images/logo.gif"></center>
+<center><img src="images/logo.gif"></center>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -117,7 +117,7 @@ h3 {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><img src="C:/Users/admin/Desktop/Jonathan/issue/images/logo.gif" width="70px" height="35px"></a>
+      <a class="navbar-brand"><img src="images/logo.gif" width="70px" height="35px"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -155,9 +155,9 @@ h3 {
 </nav>
 <h1> Contact Us </h1>
 <br>
-  <P><img src="C:\Users\admin\Desktop\Jonathan\issue\images\telephone.png" width="50px" height="50px"> Phone Number: (718) 932-0371</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\fax.png" width="50px" height="50px"> Fax: (718) 932-0372</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\email.png" width="50px" height="50px"> EMail: Contact@VDO.org</p>
+  <P><img src="images\telephone.png" width="50px" height="50px"> Phone Number: (718) 932-0371</p>
+  <p><img src="images\fax.png" width="50px" height="50px"> Fax: (718) 932-0372</p>
+  <p><img src="images\email.png" width="50px" height="50px"> EMail: Contact@VDO.org</p>
   <p>Contact Us from 9am - 11pm Monday thru Sunday</p>
 	<br>
 
@@ -172,11 +172,11 @@ h3 {
         </div>
             <div class="logos" align="right" id="social" style="float:right;">
 
-                <a href="https://www.facebook.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\facebook.png" alt="facebook" style="width:43px;height:30px;"></a>
-                <a href="https://www.twitter.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\twitter.png" alt="twitter" style="width:43px;height:30px;"></a>
-                <a href="https://instagram.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\instagram.png" alt="instagram" style="width:43px;height:30px;">
-                <a href="https://www.youtube.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\googleplus.png" alt="google+"style="width:43px;height:30px;"></a>
-                  <a href="https://www.snapchat.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\snapchat.png" alt="snapchat"style="width:43px;height:30px;"></a>
+                <a href="https://www.facebook.com"><img src="images\facebook.png" alt="facebook" style="width:43px;height:30px;"></a>
+                <a href="https://www.twitter.com"><img src="images\twitter.png" alt="twitter" style="width:43px;height:30px;"></a>
+                <a href="https://instagram.com"><img src="images\instagram.png" alt="instagram" style="width:43px;height:30px;">
+                <a href="https://www.youtube.com"><img src="images\googleplus.png" alt="google+"style="width:43px;height:30px;"></a>
+                  <a href="https://www.snapchat.com"><img src="images\snapchat.png" alt="snapchat"style="width:43px;height:30px;"></a>
                     
 
 
