--- a/socialmedia.html
+++ b/socialmedia.html
@@ -107,7 +107,7 @@ h3 {
   </style>
 </head>
 <body>
-<center><img src="C:/Users/admin/Desktop/Jonathan/issue/images/logo.gif"></center>
+<center><img src="images/logo.gif"></center>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -118,7 +118,7 @@ h3 {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><img src="C:/Users/admin/Desktop/Jonathan/issue/images/logo.gif" width="70px" height="35px"></a>
+      <a class="navbar-brand"><img src="images/logo.gif" width="70px" height="35px"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -157,11 +157,11 @@ h3 {
 </nav>
 <h1> Social Media </h1>
 <br>
-  <P><img src="C:\Users\admin\Desktop\Jonathan\issue\images\twitter.png" width="50px" height="50px"> @VDOrganization</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\facebook.png" width="50px" height="50px"> /VDOrganization</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\instagram.png" width="50px" height="50px"> /VDOrg</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\snapchat.png" width="50px" height="50px"> @WeAreVDO</p>
-  <p><img src="C:\Users\admin\Desktop\Jonathan\issue\images\googleplus.png" width="50px" height="50px"> /VDOrganization</p>
+  <P><img src="images\twitter.png" width="50px" height="50px"> @VDOrganization</p>
+  <p><img src="images\facebook.png" width="50px" height="50px"> /VDOrganization</p>
+  <p><img src="images\instagram.png" width="50px" height="50px"> /VDOrg</p>
+  <p><img src="images\snapchat.png" width="50px" height="50px"> @WeAreVDO</p>
+  <p><img src="images\googleplus.png" width="50px" height="50px"> /VDOrganization</p>
   <br>
 
 
@@ -174,11 +174,11 @@ h3 {
         </div>
             <div class="logos" align="right" id="social" style="float:right;">
 
-                <a href="https://www.facebook.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\facebook.png" alt="facebook" style="width:43px;height:30px;"></a>
-                <a href="https://www.twitter.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\twitter.png" alt="twitter" style="width:43px;height:30px;"></a>
-                <a href="https://instagram.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\instagram.png" alt="instagram" style="width:43px;height:30px;">
-                <a href="https://www.youtube.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\googleplus.png" alt="google+"style="width:43px;height:30px;"></a>
-                  <a href="https://www.snapchat.com"><img src="C:\Users\admin\Desktop\Jonathan\issue\images\snapchat.png" alt="snapchat"style="width:43px;height:30px;"></a>
+                <a href="https://www.facebook.com"><img src="images\facebook.png" alt="facebook" style="width:43px;height:30px;"></a>
+                <a href="https://www.twitter.com"><img src="images\twitter.png" alt="twitter" style="width:43px;height:30px;"></a>
+                <a href="https://instagram.com"><img src="images\instagram.png" alt="instagram" style="width:43px;height:30px;">
+                <a href="https://www.youtube.com"><img src="images\googleplus.png" alt="google+"style="width:43px;height:30px;"></a>
+                  <a href="https://www.snapchat.com"><img src="images\snapchat.png" alt="snapchat"style="width:43px;height:30px;"></a>
                     
 
 
