--- a/officehours.html
+++ b/officehours.html
@@ -152,7 +152,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="issue.html">Home<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
         <li><a href="what-is-violence.html">What is Violence?</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Office <span class="caret"></span></a>
