--- a/socialmedia.html
+++ b/socialmedia.html
@@ -160,7 +160,7 @@ h3 {
   <P><img src="images\twitter.png" width="50px" height="50px"> @VDOrganization</p>
   <p><img src="images\facebook.png" width="50px" height="50px"> /VDOrganization</p>
   <p><img src="images\instagram.png" width="50px" height="50px"> /VDOrg</p>
-  <p><img src="images\snapchat.png" width="50px" height="50px"> @WeAreVDO</p>
+  <p><img src="images\snapchat.png" width="50px" height="50px"> @WeAreVDOrg</p>
   <p><img src="images\googleplus.png" width="50px" height="50px"> /VDOrganization</p>
   <br>
 
